# pylometree

./: .editorconfig  .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  WORK_PLAN.md  pyproject.toml
.archive/source-docs-2026-05-11-154918/: README_cleanup.md
.archive/source-docs-2026-05-11-154918/extracted/: source_doc_notes.json
.archive/source-docs-2026-05-11-154918/original/: CONTRIBUTING.md  README.md  WORK_PLAN.md  docs_README.md
.github/: copilot-instructions.md
.github/workflows/: mirror-back.yml
data/: all_species.csv
docs/: README.md  api-reference.md  architecture.md  documentation_standards.md  internal-phases-roadmap.md  principles.md  species-reference.md
docs/architecture/: patterns_catalog.md
docs/project/: architecture.md  infrastructure.md  requirements.md  tech_stack.md
docs/reference/: README.md
docs/reference/guides/: testing-strategy.md
docs/reference/research/: rsh-001-allometric-naming.md
docs/tasks/: README.md  kanban_board.md
docs/tutorials/: biomass.md  hd-fitting.md  yield-tables.md
src/pylometree/: __init__.py  taxonomy.py  units.py
src/pylometree.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pylometree/data/: __init__.py  constants.py  stand.py  tree.py
src/pylometree/fitting/: __init__.py  mixed_effects.py  nonlinear.py
src/pylometree/io/: __init__.py
src/pylometree/metrics/: __init__.py
src/pylometree/models/: __init__.py  biomass.py  crown.py  hd.py  volume.py
src/pylometree/registry/: __init__.py  base.py  published.py
src/pylometree/yield_tables/: __init__.py  cli.py  loaders.py  providers.py  record.py  resolver.py  schema.py  species.py  store.py
src/pylometree/yield_tables/data/: species.csv
src/pylometree/yield_tables/r_scripts/: extract_et_nwfva.R  extract_forest_elements.R  extract_forit.R
tests/: README.md  test_biomass.py  test_crown_models.py  test_data.py  test_fitting.py  test_hd_models.py  test_io.py  test_metrics.py  test_mixed_effects.py  test_registry.py  test_taxonomy.py  test_units.py  test_volume_models.py
