[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylometree"
version = "0.1.0"
description = "General-purpose tree allometry toolkit for Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "allometry",
    "forestry",
    "biomass",
    "tree",
    "height-diameter",
    "carbon",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["numpy>=1.24", "scipy>=1.10", "pandas>=2.0"]

[project.optional-dependencies]
ml = ["scikit-learn>=1.3"]
stats = ["statsmodels>=0.14"]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]
all = [
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
