[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylometree"
version = "0.1.0"
description = "General-purpose tree allometry toolkit for Python"
readme = "README.md"
license = "CC-BY-NC-4.0"
authors = [
    { name = "XR Future Forests Lab", email = "maximilian.sperlich@gmail.com" },
]
requires-python = ">=3.12"
keywords = [
    "allometry",
    "forestry",
    "biomass",
    "tree",
    "height-diameter",
    "carbon",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["numpy>=1.24", "scipy>=1.10", "pandas>=2.0", "pint>=0.21"]

[project.optional-dependencies]
ml = ["scikit-learn>=1.3"]
stats = ["statsmodels>=0.14"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "basedpyright>=1.39.7"]
all = [
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
